--- a/views/login.hbs
+++ b/views/login.hbs
@@ -5,7 +5,7 @@
 		<h1><span class="fa fa-sign-in"></span> Login</h1>
 
 		<!-- show any messages that come back with authentication -->
-		{{#if message }}
+		{{#if message}}
 			<div class="alert alert-danger">{{message}}</div>
 		{{/if}}
 		<!-- LOGIN FORM -->
@@ -19,7 +19,7 @@
 				<input type="password" class="form-control" name="password">
 			</div>
 
-			<button type="submit" class="btn btn-warning btn-lg">Signup</button>
+			<button type="submit" class="btn btn-warning btn-lg">Login</button>
 		</form>
 
 		<hr>
