--- a/views/signup.hbs
+++ b/views/signup.hbs
@@ -8,7 +8,7 @@
 		{{#if message}}
 			<div class="alert alert-danger">{{message}}</div>
 		{{/if}}
-		<!-- LOGIN FORM -->
+		<!-- SIGNUP FORM -->
 		<form action="/signup" method="post">
 			<div class="form-group">
 				<label>Email</label>
