--- a/views/user.hbs
+++ b/views/user.hbs
@@ -1,9 +1,9 @@
 <div class="container">
 
-	<div class="page-header text-center">
+	{{!--<div class="page-header text-center">
 		<h1> Profile Page</h1>
 		<a href="/logout" class="btn btn-default btn-sm">Logout</a>
-	</div>
+	</div>--}}
 
 	<div class="row">
 
