--- a/views/partials/header.hbs
+++ b/views/partials/header.hbs
@@ -6,9 +6,9 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav navbar-right">
 				{{#if user}}
-          <li><a href="/">option 1</a></li>
+          <li><a href="/">Products</a></li>
           <li class="active"><a data-method='delete' href = "/logout">Logout <span class="sr-only"> {{user.email}} </span></a></li>
-				{{#else}}
+				{{else}}
           <li><a href="/login">Login</a></li>
           <li><a href="/signup">Signup</a></li>
 				{{/if}}
