--- a/views/products/index.hbs
+++ b/views/products/index.hbs
@@ -1,1 +1,25 @@
-<p>welcome to product page</p>
+<div class="container">
+
+	<div class="row">		
+		{{#each product}}
+		<!-- LOCAL INFORMATION -->
+		<div class="col-sm-6">
+			<div class="well">
+				<h3><span class="fa fa-book"></span>{{@key}}: {{title}}</h3>
+					
+					<p>
+						<strong>author</strong>: {{@key}}: {{author}}<br>
+						<strong>summary</strong>: {{@key}}: {{summary}}<br>
+						<strong>price</strong>: {{@key}}: {{price}}<br>
+	{{!--category: String,
+	language: String,
+	details: String,
+	pages : Number--}}
+					</p>
+
+			</div>
+		</div>
+		{{/each}}
+	</div>
+
+</div>
